--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
     "angular": "^1.5.6",
     "angular-mocks": "^1.5.6",
     "angular-ui-router": "^0.3.0",
+    "babel-polyfill": "^6.16.0",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^1.0.1",
+    "karma-coverage": "^0.5.5",
     "karma-jasmine": "^1.0.2",
+    "karma-ng-html2js-preprocessor": "^1.0.0",
+    "karma-phantomjs-launcher": "^1.0.0",
     "karma-spec-reporter": "0.0.26",
-    "nodemon": "^1.10.2"
+    "nodemon": "^1.10.2",
+    "phantomjs-prebuilt": "^2.1.7"
   }
 }
